# usa-spending-mcp-server-DEMO

./: .gitignore  README.md  manifest.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/usa_spending_mcp_server/: auth.py  client.py  server.py  server_http.py  utils.py
src/usa_spending_mcp_server/models/: award_spending_models.py  category_spending_models.py  common_models.py  disaster_spending_models.py  geography_spending_models.py  recipient_models.py  spending_explorer_models.py  spending_over_time_models.py
src/usa_spending_mcp_server/tools/: agency_spending.py  award_spending.py  category_spending.py  disaster_spending.py  geograph_spendingy.py  geography.py  geography_spending.py  geography_spendingy.py  program_activity_spending.py  recipient_spending.py  reference_tools.py  spending.py  spending_explorer.py  spending_over_time.py  subaward_spending.py
tests/: conftest.py  test_auth.py  test_award_tools.py  test_geography_tools.py  test_program_activity_tools.py  test_recipient_tools.py  test_reference_tools.py
