[project]
name = "usa-spending-mcp-server"
version = "0.1.0"
description = "MCP server for USAspending.gov API with login.gov authentication"
authors = [
    {name = "Samuel Levy", email = "sam.levy@gsa.gov"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.9.2,<3",
    "httpx>=0.28.1,<0.29",
    "mcp>=1.11.0,<2",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
]

[project.scripts]
usa-spending-mcp-server = "usa_spending_mcp_server.server:main"
usa-spending-mcp-server-http = "usa_spending_mcp_server.server_http:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "taskipy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/usa_spending_mcp_server"]

# Ruff - replaces black, isort, flake8, pylint
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented out code)
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["usa_spending_mcp_server"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# Pytest
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

# Coverage
[tool.coverage.run]
source = ["src/usa_spending_mcp_server"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# Taskipy - task runner
[tool.taskipy.tasks]
# Development
dev = "REQUIRE_AUTH=false uvicorn usa_spending_mcp_server.server_http:app --reload --port 8080"
dev-auth = "uvicorn usa_spending_mcp_server.server_http:app --reload --port 8080"

# Linting & Formatting
lint = "ruff check src tests"
lint-fix = "ruff check --fix src tests"
format = "ruff format src tests"
format-check = "ruff format --check src tests"

# Testing
test = "pytest"
test-cov = "pytest --cov --cov-report=term-missing"
test-ci = "pytest --cov --cov-report=xml"

# CI (runs all checks)
ci = "task lint && task format-check && task test"

# Deployment
deploy = "cf push"
